--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="app">
-      <canvas id="game-canvas"></canvas>
+      <canvas id="game-canvas" width="1000" height="1000"></canvas>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
