--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Blahaj the Blahbarian</title>
+    <img id="shark-sprites" src="/assets/shark-sprites.png">
   </head>
   <body>
     <div id="app">
