--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Blahaj the Blahbarian</title>
     <img id="shark-sprites" src="/assets/shark-sprites.png">
+    <img id="wardrobe" src="/assets/wardrobe.png">
   </head>
   <body>
     <div id="app">
