--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <img id="shark-sprites" src="/assets/shark-sprites.png">
     <img id="health-sprites" src="/assets/meatball-sprites.png">
     <img id="wardrobe" src="/assets/wardrobe.png">
+    <img id="sword" src="/assets/sword.png">
   </head>
   <body>
     <div id="app">
