--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div id="app">
+        <video id="video" src="/assets/0001-0030.mp4" height="360" width="640" autoplay loop></video>
       <canvas id="game-canvas" width="1000" height="1000"></canvas>
     </div>
     <script type="module" src="/src/main.ts"></script>
