Copy from other branch

--- a/index.html
+++ b/index.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Blahaj the Blahbarian</title>
-    <img id="shark-sprites" src="/assets/shark-sprites.png">
-    <img id="health-sprites" src="/assets/meatball-sprites.png">
-    <img id="wardrobe" src="/assets/wardrobe.png">
-    <img id="sword" src="/assets/sword.png">
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + TS</title>
   </head>
   <body>
-    <div id="app">
-        <video id="video" src="/assets/0001-0030.mp4" height="360" width="640" autoplay loop></video>
-      <canvas id="game-canvas" width="1000" height="1000"></canvas>
-    </div>
+    <canvas id="canvas">
+
+    </canvas>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
